--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,142 @@
-.App {
+:root{
+  --primary-color: #1C0221;
+  --secondary-color: #7B5E7B;
+  --tertiary-color: #938274;
+}
+
+body {
+  color: var(--primary-color);
+  font-family: Helvetica, Arial, sans-serif;
+  margin: 0;
+}
+
+header {
+  padding: 20px 35px;
+  background-color: var(--primary-color);
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+
+header h1 {
+  font-weight: bold;
+  font-size: 50px;
+  color: var(--secondary-color);
+  margin: 0;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  line-height: 1.5;
+}
+
+header a {
+  color: var(--secondary-color);
+  text-decoration: none;
+}
+
+nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+}
+
+nav ul li a {
+  padding: 20px 20px;
+  font-weight: bolder;
+  font-size: 1.55vw;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  line-height: 2;
+}
+
+nav ul li a:hover {
+  background: var(--secondary-color);
+  color: var(--primary-color);
+  border-radius: 15px;
+  text-shadow: none;
+}
+
+footer {
+  background: var(--primary-color);
+  color: var(--secondary-color);
+  padding: 20px 35px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  font-weight: bolder;
+}
+
+#about {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--tertiary-color);
+}
+
+#about-text {
+  text-align: center;
+  font-size: 20px;
+  padding: 20px;
+}
+
+#projects {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  background-color: var(--tertiary-color);
+  align-items: center;
+  justify-content: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#project-intro-text {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 20px;
+  background-color: var(--tertiary-color);
+  flex-direction: column;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.project{
+  background-color: var(--secondary-color);
+  font-size: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.project h3 a {
+  color: var(--primary-color);
+  text-decoration: none;
+}
+
+.project h3 a:hover {
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+  border-radius: 40px;
+  text-shadow: none;
+}
+
+.container {
+  width: 800px;
+  height: 480px;
+  padding: 10px;
+}
+
+.container img {
+  width: 100%;
+  height: auto;
+}
+
+#contact {
+  font-size: 20px;
+  background-color: var(--tertiary-color);
   display: flex;
+  flex: nowrap;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  text-align: center;
+  
 }
